Fix bug #54379 PDO_OCI: UTF-8 output gets truncated