ext/pdo_oci/oci_statement.c
@@ -602,9 +602,8 @@ static int oci_stmt_describe(pdo_stmt_t *stmt, int colno) /* {{{ */
 			} else {
 				S->cols[colno].datalen = (ub4) col->maxlen;
 			}
-			if (dtype == SQLT_BIN) {
-				S->cols[colno].datalen *= 3;
-			}
+
+			S->cols[colno].datalen *= S->H->max_char_width;
 			S->cols[colno].data = emalloc(S->cols[colno].datalen + 1);
 			dtype = SQLT_CHR;
 
